# wavepeek

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  dist-workspace.toml  install.ps1  install.sh  justfile  mkdocs.yml  opencode.json  requirements-docs.txt  schema-input-v2.1.json  versions.json  wavepeek-stream-v1.json
.agents/: PRD.md  RELEASE.md
.devcontainer/: AGENTS.md  Dockerfile  README.md  devcontainer.ci.json  devcontainer.json  env_contract.sh  initialize-host.sh  initialize.sh  resolve_rtl_artifacts_dir.sh  resolve_verdi_home.sh  setup-github-auth.sh  test_initialize.py  verdi-tool-wrapper.sh
.github/: AGENTS.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: AGENTS.md  ci.yml  docs.yml  publish-crate.yml  release.yml
.memory-bank/: RELEASE.md
.opencode/: AGENTS.md  README.md
.opencode/agent/: deliver.md  review.md
.opencode/agents/: planner.md  reviewer.md
0.5.0/: index.html  sitemap.xml
0.5.0/search/: search_index.json
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/search/: search_index.json
2.0.0/: 404.html  index.html  install.ps1  install.sh  sitemap.xml
2.0.0/search/: search_index.json
2.1.0/: 404.html  index.html  install.ps1  install.sh  sitemap.xml
2.1.0/search/: search_index.json
bench/: AGENTS.md
bench/e2e/: AGENTS.md  perf.py  test_perf.py  tests.json  tests_commit.json  tests_fsdb.json  (+1 more)
benches/: AGENTS.md  expr_c1.rs
docs/: AGENTS.md  ARCHITECTURE.md  BACKLOG.md  DESIGN.md  DEVELOPMENT.md  RELEASE.md  ROADMAP.md  cmd_docs_proposal.md  expression_cov.md  expression_lang.md  expression_roadmap.md  expression_tests.md  fsdb_proposal.md  verdi_2022_api_explore.md
latest/: 404.html
perf/: AGENTS.md
schema/: AGENTS.md  catalog.json  input.json  output.json  stream.json  wavepeek-stream-v1.json  wavepeek-stream-v2.0.json  wavepeek.json  wavepeek_v0.json  wavepeek_v1.json  wavepeek_v2.0.json
scripts/: AGENTS.md  check_coverage.py  check_fsdb_bench_artifacts.py  check_fsdb_env.py  check_schema_contract.py  cli_e2e_bench.py  codex_env_common.sh  codex_resume.sh  codex_setup.sh  extract_release_notes.py  opencode_loop.py  prepare_fsdb_fixtures.sh  repo_stats.py  test_check_coverage.py  test_check_fsdb_env.py  test_extract_release_notes.py
src/: AGENTS.md  debug_trace.rs  diagnostic.rs  error.rs  lib.rs  main.rs  output.rs  output_mode.rs  perf_diag.rs  schema_contract.rs
tests/: AGENTS.md  at_cli.rs  change_cli.rs  change_opt_equivalence.rs  change_vcd_fst_parity.rs  cli_contract.rs  command_fixture_contract.rs  debug_diagnostics_cli.rs  docs_cli.rs  expression_c1.rs  expression_c2.rs  expression_c3.rs  expression_c4.rs  expression_direct_semantics.rs  expression_event_runtime.rs  expression_fixture_contract.rs  expression_hygiene.rs  expression_integral_boolean.rs  expression_parse.rs  expression_rich_types.rs  extract_ahb_cli.rs  extract_apb_cli.rs  extract_atb_cli.rs  extract_axi_cli.rs  extract_axistream_cli.rs  extract_generic_cli.rs  extract_generic_vcd_fst_parity.rs  fsdb_cli.rs  fsdb_disabled_cli.rs  info_cli.rs  jsonl_cli.rs  modules_cli.rs  property_cli.rs  property_vcd_fst_parity.rs  schema_cli.rs  scope_cli.rs  signal_cli.rs  signals_cli.rs  skill_cli.rs  tree_cli.rs  (+2 more)
tools/: AGENTS.md
(+1720 files in other folders)
