[package]
name = "wavepeek"
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
authors = ["esynr3z"]
description = "Command-line tool for RTL waveform inspection with deterministic machine-friendly output."
license = "Apache-2.0"
repository = "https://github.com/kleverhq/wavepeek"
homepage = "https://github.com/kleverhq/wavepeek"
readme = "README.md"
documentation = "https://docs.rs/wavepeek"
keywords = ["rtl", "waveform", "vcd", "fst", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".devcontainer/*",
    ".github/*",
    ".opencode/*",
]

[dependencies]
clap = { version = "~4", features = ["derive"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
regex = "~1"
thiserror = "~2"
wellen = "~0.20"

[dev-dependencies]
assert_cmd = "~2"
predicates = "~3"
tempfile = "~3"
insta = "~1"
criterion = { version = "~0.8", features = ["csv_output"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[lib]
bench = false

[[bin]]
name = "wavepeek"
path = "src/main.rs"
bench = false

[[bench]]
name = "expr_c1"
path = "bench/expr/expr_c1.rs"
harness = false
