[package]
name = "wavepeek"
version = "2.0.0"
edition = "2024"
rust-version = "1.93"
authors = ["esynr3z"]
description = "Command-line tool for RTL waveform inspection with deterministic machine-friendly output."
license = "Apache-2.0"
repository = "https://github.com/kleverhq/wavepeek"
homepage = "https://github.com/kleverhq/wavepeek"
readme = "README.md"
documentation = "https://docs.rs/wavepeek"
keywords = ["rtl", "waveform", "vcd", "fst", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".devcontainer/*",
    ".github/*",
]

[features]
default = []
fsdb = []

[dependencies]
clap = { version = "~4", features = ["derive"] }
schemars = "1.2.1"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
regex = "~1"
thiserror = "~2"
wellen = "~0.20"
include_dir = "~0.7"
serde_yaml = "~0.9"

[dev-dependencies]
assert_cmd = "~2"
predicates = "~3"
tempfile = "~3"
insta = "~1"
jsonschema = { version = "~0.46", default-features = false }

[build-dependencies]
cc = "~1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lib]
bench = false

[[bin]]
name = "wavepeek"
path = "src/main.rs"
bench = false
